<?xml version="1.0"?>
<package format="3">
  <name>nav2_waypoint_tools</name>
  <version>0.0.1</version>
  <description>RViz waypoint pose tool and NavigateThroughPoses collector in one package.</description>

  <maintainer email="gunji.kenta@rm.is.tohoku.ac.jp">Kenta Gunji</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>tf2</depend>
  <depend>nav_msgs</depend>
  <depend>yaml-cpp</depend>

  <build_depend>qtbase5-dev</build_depend>
  <exec_depend>qtbase5-dev</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>